# LlamaBot

./: .gitignore  API.md  README.md  generateJWT.sh  index.js  package-lock.json  package.json  tsconfig.json
python/: example.txt  main.py  prompt.txt  pyproject.toml  requirements.txt  result.json
python/schemas/: extraction.schema.json
src/: Bot.ts  GuildHolder.js  GuildHolder.ts  Submission.js  SubmissionsManager.js  bot.js  bot.mjs  index.ts
src/api/: APIServer.ts  APITokenManager.ts  APITypes.ts
src/archive/: ArchiveChannel.ts  ArchiveComments.ts  ArchiveEntry.ts  DictionaryManager.ts  DictionaryStorageMigration.ts  DiscordServersDictionary.ts  IndexManager.ts  PrivateFactBase.ts  ReadMeMaker.ts  RepositoryConfigs.ts  RepositoryManager.ts  Tasks.ts  TemporaryCache.ts
src/buttons/: finalize.js  makecurrent.js  setchannel.js  settags.js
src/commands/: AntiSpamCommand.ts  AskCommand.ts  BulkDeleteCommand.ts  DebugCommand.ts  DefineCommand.ts  DictionaryEditCommand.ts  DiscordsCommand.ts  EditCommand.ts  EditorPowersCommand.ts  EndorseCommand.ts  GetPostCommand.ts  GetPostsByCommand.ts  GetStatsCommand.ts  GetThanksCommand.ts  JoinDiscordCommand.ts  KickRoleCommand.ts  MoveConvoCommand.ts  MoveConvoEndContextCommand.ts  MoveConvoStartContextCommand.ts  MwaCommand.ts  SearchCommand.ts  SubscribeCommand.ts  ToggleHelper.ts  TokenCommand.ts  TopHelpersCommand.ts  UnsubscribeCommand.ts  editorpowers.ts  endorse.ts  index.ts  mwa.ts
src/config/: ChannelSubscriptionManager.ts  ConfigManager.ts  GuildConfigs.ts  (+3 more)
src_old/: Bot.js  GuildHolder.js  Submission.js
(+165 files in other folders)
