[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "llama-cpp-python>=0.3.16",
    "outlines[transformers]>=1.2.9",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]
